updated carousel functionality, pivoted concept to static carousel. Infinite cycle TO BE IMPLEMENTED. Small bug at the moment, offset is not exact => leading to small overlap over prev button

--- a/public/carousel.css
+++ b/public/carousel.css
@@ -13,16 +13,17 @@
 .item {
   margin: 0 20px;
   flex: 0 0 calc(100% / var(--visibleItems) - 40px);
-  height: 150px;
+  height: 850px;
   border: 1px solid green;
   display: flex;
   align-items: center;
   justify-content: center;
+  background: rgba(255, 255, 255, 0.5);
 }
 
 .control-button {
   cursor: pointer;
-  width: 200px;
+  min-width: 200px;
   background-color: #ddd;
   padding: 10px 15px;
   border: none;
