--- a/public/index.scss
+++ b/public/index.scss
@@ -20,7 +20,6 @@ body{
     }
 
     .store-intro, .aside-store{
-        
         display: flex;
         height: 100%;
 
@@ -70,21 +69,28 @@ body{
     }
 
     #logo1, #logo2{
-        transition: transform 4s ease-in; /* Adjust 1s to control the speed of the animation */
+        z-index: 4;
+        transition: transform 4s ease-in; /* Adjust to control the speed of the animation */
+    }
+    
+    .transform-transition{
+        transition: transform 4s ease-in; /* Adjust to control the speed of the animation */
     }
 
     .store {
+        // transform: translateX(100%);
         position: absolute;
         width: 100%;
+        height: 100%;
 
         top: 0;
-        z-index: 1000;
+        // z-index: 1000;
 
         display: flex;
         align-items: center;
         justify-content: center;
 
-        margin: 40px;
+        margin: 0;
     }
 
     #banner{
